Adding more providers and utility classes